# jtap-mice

./: .gitattributes  .gitignore  README.md  pyproject.toml
assets/stimuli/: lr_v1.json
assets/stimuli/gabe_v1/: leftOcc_noSwitch.json  leftOcc_switch.json  noOcc_noSwitch.json  noOcc_switch.json  rightOcc_noSwitch.json  rightOcc_switch.json
configs/: jtap_hyperparams.yaml
notebooks/: scratchpad.ipynb
notebooks/left_right_task/: left_right_mice_stimuli_generation.ipynb  lr_generation_code.py  lr_model.ipynb  run_mice_jtap.ipynb
notebooks/red_green_task/: debug_jtap_run.ipynb  hypertuning.py  run_cogsci2025_single_trial.ipynb  tuning_utils.py
scripts/: jtap_run_config.yaml  run_all_gabe_v1.sh  run_jtap.py  run_jtap_single_json.py  run_simulation.py
src/jtap/: __init__.py
src/jtap/core/: __init__.py  superpytree.py
src/jtap/distributions/: categorical.py
src/jtap/evaluation/: beliefs.py  combined_metrics.py  decisions.py  inference_analysis.py  metrics.py  results.py
src/jtap/inference/: data_driven.py  grid_inference.py  inference_utils.py  init_proposal.py  jtap_algorithm.py  jtap_types.py  step_proposal.py
src/jtap/model/: initialization.py  likelihood.py  model.py  sensor.py  stepper.py
src/jtap/utils/: datastrucs.py  paths.py  pytree.py  stimuli.py
src/jtap/viz/: figure_visuals.py  jtap_viz.py  rg_lines.py  stimulus_viz.py
src/jtap_mice/: all.py
src/jtap_mice/distributions/: __init__.py  continuous.py  custom_samplers.py
src/jtap_mice/evaluation/: __init__.py  beliefs.py  combined_metrics.py  decisions.py  inference_analysis.py  metrics.py  results.py
src/jtap_mice/inference/: __init__.py  data_driven.py  (+5 more)
tests/: run_tests.py
tests/legacy/: cogsci_2025_experiment_refactored.py  old_inference_utils.py
tests/unit_tests/: test_import.py
(+149 files in other folders)
